--- a/JPADemo002/build.gradle
+++ b/JPADemo002/build.gradle
@@ -25,7 +25,7 @@ repositories {
 
 jar {
     manifest{
-        attributes ('Main-Class': 'com.amitph.spring.dogs.repo.Application')
+        attributes ('Main-Class': 'dogapps.Application')
     }
 
     from{
